--- a/gam/enter/emergancy.html
+++ b/gam/enter/emergancy.html
@@ -3,10 +3,10 @@
 
 <textarea>
 
-    https://interstellar-hwgb-git-main-dogecoolbois-projects.vercel.app/
-
+    https://v6-git-main-dogecoolbois-projects.vercel.app
+Same passwords
  
-    https://interstellar-hwgb-r212mxgz2-dogecoolbois-projects.vercel.app/
+   https://v6-5aamqgf68-dogecoolbois-projects.vercel.app
     
 </textarea>
 
